feat: first commit

--- a/manual/20250225.md
+++ b/manual/20250225.md
@@ -17,7 +17,9 @@ npm --version
 - node.js 설치 사이트
 https://nodejs.org/download
 
+- PowerShell에서 실행: 
 Get-ExecutionPolicy
 -> (Unrestricted)
 Set-ExecutionPolicy RemoteSigned - scope CurrentUser -Force
 -> (RemoteSigned)
+
