--- a/manual/20250226.md
+++ b/manual/20250226.md
@@ -211,9 +211,9 @@ export default HeaderText
 
 App4.jsx만들겠습니다.
 
-import React, {memo} from 'react';
+import React, { memo } from 'react';
 
-function HeaderText(props){
+function HeaderText(props) {
   return (
     <h1>
       {props.text}
@@ -221,99 +221,247 @@ function HeaderText(props){
   );
 }
 
-export default memo(HeaderText)
+export default memo(HeaderText);
 
-/*
-  이제 컴포넌트가 렌더링되고 '메모이제이션'된다. 다음 렌더링에서 리액트는 프롭값이 변동되지 않으면 메모된 결과를 렌더링합니다. 변동이 있으면 업데이트하고, 변동이 없다면 메모된 그대로 렌더링 한다는 의미.
-  React.memo() 함수에 렌더링 조건을 사용자 정의하는데 이용할 수 있는 두 번쨰 argument인 arePropsEqual()도 있기는 한데, 추후 사용할 예정.
+/**
+ * 이제 컴포넌트가 렌더링되고 '메모이제이션'된다. 다음 렌더링에서 리액트는 프롭값이 변동되지 않으면 메모된 결과를 렌더링합니다. 변동이 있으면 업데이트하고, 변동이 없다면 메모된 그대로 렌더링한다는 의미. 
+ * React.memo() 함수에 렌더링 조건을 사용자 정의하는 데 이용할 수 있는 두 번째 argument인 arePropsEqual()도 있기는 한데, 추후 사용할 예정.
+ * 
+ * 함수 컴포넌트 방식을 사용할 때 얻을 수 있는 이점 중 하나는 동일한 입력값에 대해 반환값이 항상 동일하기 때문에 단위 테스트가 간단하는 점이 있습니다.
+ * 
+ * 조건부 렌더링
+ */
 
-  함수 컴포넌트 방식을 사용할 때 얻을 수 있는 이점 중 하나는 동일한 입력값에 대해 반환값이 항상 동일하기 때문에 단위 테스트가 간단하다는 점이 있습니다. 
 
-  조건부 렌더링
-  
-*/
+ ### 조건부 렌더링
 
-### 조건부 렌더링
+ : 조건문을 이용하여 조건이 true / false일 때 다른 UI를 렌더링할 수 있다
+ (저희는 vanilla JS로 짰습니다 signin 페이지와 signup페이지로).
+ 해당 기능은 일부 요소를 표시하거나 숨기고 인증을 처리하는 등의 작업에
+ 이용 가능합니다.
 
-: 조건문을 이용하여 조건이 true / false일 때 다른 UI를 렌더링할 수 있다
-  (저희는 vanilla JS로 짰습니다. signin 페이지와 signup 페이지로)
-  해당 기능은 일부 요소를 표시하거나 숨기고 인증을 처리하는 등의 작업에 이용 가능합니다. 
-
-```jsx
-function MyComponent(props){
+ ```jsx
+function MyComponent(props) {
   const isLoggedIn = props.isLoggedIn;
 
-  if(isLoggedIn){
-    return(
-      <LogOut />
+  if (isLoggedIn) {
+    return (
+      <Logout />
     )
   }
 
-  return(
+  return (
     <Login />
   )
-
-
 }
-``` 
-//동일한 구조라고 가저했을 때 결국 if-else 구문이니까
-//우리는 위의 코드를 축약시킬 수 있을 겁니다. -> 삼항연산자
+ ```
 
-삼항연산자 적용 코드
-```jsx
-function MyComponent(props){
+ // 동일한 구조라고 가정했을 때 결국 if - else 구문이니까
+ // 우리는 위의 코드를 축약시킬 수 있을 겁니다. -> _ _ _ _ _
+
+ 삼항연산자 적용 코드
+
+ ```jsx
+function MyComponent(props) {
   const isLoggedin = props.isLoggedin;
-  return(
+  return (
     <>
-      {isLoggedin ? <Logout />: <Login />}
+      {isLoggedin ? <Logout /> : <Login />}
     </>
   )
 }
-```
+ ```
 
-## React Hook
+ ## React Hook
 
-: 훅(Hook)은 React 16.8 부터 도입된 기능으로, 함수 컴포넌트에서 상태와 리액트의 다른 기능을 이용하는데 사용됩니다. 
+ : 훅(Hook)은 React 16.8부터 도입된 기능으로, 함수 컴포넌트에서
+ 상태와 리액트의 다른 기능을 이용하는데 사용됩니다. 
 
-훅 이전에는 복잡한 컴포넌트 로직이 있는 경우 클래스 컴포넌트를 사용해야만 했었는데, 이를 통해 함수형 프로그래밍의 작성에 큰 도움을 주었습니다. 
+ 훅 이전에는 복잡한 컴포넌트 로직이 있는 경우 클래스 컴포넌트를 사용해야만
+ 했었는데, 이를 통해 함수형 프로그래밍의 작성에 큰 도움을 주었습니다.
 
--> 배우기는 좀 어려웠습니다. 
+ -> 배우기는 좀 어려웠습니다.
 
-- 리액트에서 훅을 이용하는 데에 사용되는 규칙
-1. 항상 리액트 함수 컴포넌트의 최상위 수준에서 훅을 호출해야 함.
-2. 반복문, 조건문, 중첩 함수 안에서 훅을 호출해서는 안된다. 
-3. 훅 이름은 use로 시작하고, 그 뒤에 훅을 이용하는 목적이 따라온다.
+ - 리액트에서 훅을 이용하는 데에 사용되는 규칙
+ 1. 항상 리액트 함수 컴포넌트의 최상위 수준에서 훅을 호출해야 함.
+ 2. 반복문, 조건문, 중첩 함수 안에서 훅을 호출해서는 안된다.
+ 3. 훅 이름은 use로 시작하고, 그 뒤에 훅을 이용하는 목적이 따라온다.
 
-### useState
+ ### useState
 
-: 상태를 선언하는데 이용하는 useState 함수 역시 훅에 해당합니다. 
+ : 상태를 선언하는 데 이용하는 useState 함수 역시 훅에 해당합니다.
+
+ // import {useState} from 'react';
+/**
+ * 1. Counter 컴포넌트를 생성하고 초기값이 0인 count 상태를 선언.
+ */
+// function Counter() {
+//   // 초기값이 0인 count 상태
+//   const [ count, setCount ] = useState(0);
+  
+//   return <div></div>
+// }
+
+// export default Counter;
+
+/**
+ * 2. 다음으로 상태를 1씩 증가시키는 버튼 요소를 렌더링합니다.
+ * onClick 이벤트 속성을 이용하여 setCount 함수를 호출하고,
+ * 새 값은 현재 값에 +1을 더한 값을 설정할겁니다.
+ */
+
+// import { useState } from 'react';
+
+// function Counter() {
+//   const [ count, setCount ] = useState(0);
+
+//   return(
+//     <div>
+//       <p>현재 카운트 값 = {count}</p>
+//       <button onClick={() => setCount(count+1)}>증가시킵니다</button>
+//     </div>
+//   );
+// }
+
+// export default Counter;
+
+/**
+ * 참고 사항 : 리액트에서 이벤트의 이름은 카멜케이스로 작성(ex) onClick)합니다.
+ */
+
+// 바른 예시
+{/* <button onClick={() => setCount(count+1)}>증가</button> */}
+
+// 틀린 예시
+{/* <button onClick={setCount(count+1)}>증가</button> */}
+
+// 틀린 예시로 실행했을 경우 생기는 문제점 :
+
+/**
+ * 이벤트 핸들러(onClick) 내에서 함수를 직접 호출했을 경우 컴포넌트가 렌더링 될 때 함수가 호출되어 무한 루프가 발생할 수 있음.
+ * 
+ * setCount의 경우 
+ * const [ count, setCount ] = useState(initialValue)로 정의돼있을 뿐인데,
+ * 왜 setCount(argument)의 형태로 호출하는가?
+ * 
+ * setCount(count +1);이 되는 근거?
+ * 
+ * useState를 사용하는 순간에 배열의 0번지는 상태 그 자체에 해당하는 필드명으로 선언되고,
+ * 1번지는 setter 개념으로서 0번지의 상태값을 업데이트하도록 사전에 설정
+ * 되어있습니다.
+ * 
+ * 그렇기 때문에 저희가 따로 setter 형태로 함수를 정의하지 않더라도
+ * call2() 유형의(매개변수가 있고 리턴값이 없는) 함수로 만들어지는 것을 의미합니다.
+ */
+
+// function addButtonNumber() {
+//   let count = 0;
+//   count++;
+// }
+// 라고 +1씩 증가시켜주는 개념으로 생각하시면 안됩니다.
+
+// const [ count, setCount ] = useState(initialValue);
+// 70번 라인까지의 count = initialValue;
+// setCount(newValue); 
+// 72번 이후로는 count = newValue;
+
+/**
+ * 그리고 이벤트 핸들러 내부에서 화살표 함수로 작성해야 하는 이유
+ * (즉시 실행 함수가 아니라)
+ * 
+ * 화살표 함수 : 
+ *  전달 방식 - 함수 참조 전달(클릭 시에만 실행)
+ *  실행 시점 - 사용자가 클릭할 때만
+ *  결과 - 버튼을 클릭할 때만 증가됨
+ * 즉시 실행 함수 : 
+ *  전달 방식 - 함수의 실행결과값을 전달(렌더링 할 때마다 실행)
+ *  실행 시점 - 컴포넌트가 렌더링 될 때
+ *  결과 - 렌더링이 멈추지 않기 때문에 계속해서 함수를 호출하여 무한 루프
+ */
+
+/**
+ * 이상까지 작성했을 때 App.jsx의 button과 비교를 해보면 이제 하나만 차이가 납니다. 저희가 작성한 방식은 call3() 유형으로 매개변수는 없는데, return은 있는 형태였습니다.
+ * 
+ * 그런데 App.jsx를 확인해봤을 때 setCount((count) => count+1)
+ * 으로 작성되어 call4()유형(매개변수o / return o)으로 작성되었음을 확인할 수 있습니다.
+ * 
+ * 
+ * 이상의 차이가 나는 이유는 리액트의 성격 때문인데,
+ * 상태 업데이트는 비동기적으로 일어납니다. 새 상태 값이 현재 상태 값에
+ * 따라 달라질 수 있다는 문제가 있습니다.
+ */
+
+// 비동기적으로 상태가 업데이트 된다는 사례를 증명하는 거고
+// 리액트 컴포넌트 내에 상태를 사용하는 useState를 적용했구요
+// 그 useState가 자바스크립트 식 함수 정의에 사용되었습니다.
+// import {useState} from 'react';
+
+// function Counter() {
+//   const [ count, setCount ] = useState(0);
+
+//   const handleClick = () => {
+//     setCount(count + 1);
+//     setCount(count + 1);
+//     setCount(count + 1);
+//   };
+
+//   return (
+//     <>
+//       <p>카운터 : {count}</p>
+//       <button onClick={handleClick}>증가</button>
+//     </>
+//   );
+// }
+
+// export default Counter
+
+// 이상의 코드를 봤을 때 한 번 클릭을 하게 됐을 경우 handleClick 함수가 작동하면서
+// count가 +3씩 이루어져야 할 것 같은데, 결과값을 봤을 경우 +1 씩 된다는 점을 확인할 수 있습니다.
+
+/**
+ * 이상의 현상이 일어나는 이유 :
+ * 1. setCount(count + 1)은 현재 상태의 고정된 값을 사용해 업데이트가 일어남
+ * 
+ * 2. 이상을 이유로 count의 값은 handleClick을 호출했을 시점에 '고정'되어있음.
+ * 
+ * 3. 1, 2를 이유로 세 번의 setCount는 초기값인 count=0을 시점으로 1을 더해주기 때문에
+ * 
+ * 0 + 1
+ * 0 + 1
+ * 0 + 1
+ * 로, count = 1을 return하게 됨.
+ * 
+ * 그래서 이상의 문제를 해결하기 위한 방법
+ * : 함수형 업데이트(Fuction Update)
+ */
 
 // import {useState} from 'react';
 
 // function Counter() {
-  
-//   const [count, setCount] = useState(0);
+//   const [ count, setCount ] = useState(0);
 
-//   const hadleClick = () => {
-//     setCount((preCount) => preCount + 1);    
-//     setCount((preCount) => preCount + 1);    
-//     setCount((preCount) => preCount + 1);    
-//   }
-  
+//   const handleClick = () => {
+//     setCount((preCount) => preCount + 1);
+//     setCount((preCount) => preCount + 1);
+//     setCount((preCount) => preCount + 1);
+//   };
+
 //   return (
 //     <>
-//     <p> 카운터: {count}</p>
-//     <button onClick></button>
+//       <p>카운터 : {count}</p>
+//       <button onClick={handleClick}>증가</button>
 //     </>
-//   )
-
+//   );
 // }
-// export default Counter;
 
-// 내일 그러면 <p>태그와 <button>태그로 이루어진 완벽한 형태의 Counter 컴포넌트를 작성하여 실행하는 것부터 수업을 시작할 예정
+// export default Counter
+
+// 내일 그러면 <p> 태그와 <button>태그로 이루어진
+// 완벽한 형태의 Counter 컴포넌트를 작성하여 실행하는 것부터
+// 수업을 시작할 예정
 
 git add .
-git commit -m "feat:20250226 useState lesson"
+git commit -m "feat: 20250226 useState lesson"
 git push
 
 하고 로그아웃
