feat: 20250305: typescript project started

--- a/manual/20250226.md
+++ b/manual/20250226.md
@@ -64,12 +64,12 @@ function ChildComponent(props) {
 // 이상의 코드가 의미하는 바는 : props 내의 복수의 키-값 쌍(properties)가 있을 수 있음을 보여줍니다.
 
 // 그리고 20250225에 배운 객체의 구조분해를 이용할 수도 있습니다.
-
+```jsx
 function Hello4( { firstName, lastName }) {
   return <h1>Hello {firstName} {lastName} </h1>
 }
-
 export default Hello4
+```
 
 ### State
 
