feat: 20250310 shoppinglist started

--- a/manual/20250307.md
+++ b/manual/20250307.md
@@ -60,7 +60,7 @@ function CarData(props) {
 }
 ```
 
-경쟁 조건을 피하기 위해 사용되는 동시성 제어와 같은 여러 메커니즘을 제공하는 리액트 쿼리를 이용할겁니다. 이상을 통해 주어진 쿼리 키에 대해 한 번에 하나으 ㅣ요청만 전송하도록 관리할 수 있도록 하겠습니다. 
+경쟁 조건을 피하기 위해 사용되는 동시성 제어와 같은 여러 메커니즘을 제공하는 리액트 쿼리를 이용할겁니다. 이상을 통해 주어진 쿼리 키에 대해 한 번에 하나의 요청만 전송하도록 관리할 수 있도록 하겠습니다. 
 
 ## React Query 라이브러리 이용
 
@@ -78,4 +78,396 @@ git add.
 git commit -m "feat: 20250307 react query lesson"
 git push
 
+gitapi 설치폴더로 넘어가서 다음을 터미널에서 실행
+
 npm run dev
+
+npm install axios
+
+npm install @tanstack/react-query@4
+
+다 끝낸 후에 App.jsx 초기 설정합니다. (fragment만 남기고 다 지우기)
+
+### React Query의 개요
+
+#### React Query란?
+
+: React 애플리케이션에서 서버 상태 관리를 쉽게 할 수 있도록 도와주는 라이브러리
+
+1.  기존 방식(useState / useEffect) vs. React Query
+기존 방식 예시
+- useState / useEffect 를 이용해 API 요청 관리 (어제 수업했습니다)
+- 매번 API 요청시 로딩 상태를 수동으로 관리
+- 캐싱을 직접 규현해야 함
+- Refetch를 직접 코드로 구현해야 함.
+
+2. React Query
+- useQAuery 하나로 데이터 요청 가능
+- isLoading, isFetching 등의 상태를 자동으로 제공
+- 자동 캐싱 및 백그라운드 업데이트
+- staleTime, refetchOnWindowFocus 등 옵션 제공
+
+기능상 특징
+- 자동 캐싱 및 백그라운드 업데이트 : 데이터가 오래되었는지 자동으로 판단, 백그라운드에서 자동 업데이트를 실행
+
+ex) staleTime을 설정하여 일정 시간 동안 데이터 요청을 방지하여 성능 최적화
+
+- 특정 이벤트에서 데이터 새로고침(refetch) : 버튼 클릭 시 데이터를 새로 불러오려면 refetch 함수 사용 가능 -> refetch() 호출 시 기존 데이터를 삭제하지 않고 다시 가져옴
+
+- 윈도우 포커스 시 자동 새로고침 : 사용자가 브라우저 탭을 다시 활성화하면 데이터가 새로고침 되는데, 이 기능이 필요 없는 경우 refetchOnWindowFocus : false를 사용하면 되는 등의 추가 옵션
+
+- 간단한 API 호출 코드 : 불필요한 상태 변수를 없애고, 가독성이 증진됨.
+
+### 실습 파트에서
+
+- 리액트 쿼리는 데이터 캐싱을 처리하는 QueryClientProvider와 QueryClient 컴포넌트를 제공합니다. 
+queryClient 인스턴스를 생성(function App 외부에서)하고, App 컴포넌트 내부에서 QueryClientProvider 렌더링했습니다. 
+- 리액트 쿼리 사용을 위해서는 import가 필요합니다. 
+
+```jsx
+import './App.css'
+import { QueryClient, QueryClientProvider } from '@tanstack/react-query'
+
+const queryClient = new QueryClient();
+
+function App() {
+  
+  return (
+    <>
+      <QueryClientProvider client = {queryClient}>
+        
+      </QueryClientProvider>  
+    </>
+  )
+}
+
+export default App
+```
+
+리액트 쿼리에서 네트워크 요청을 호출하는 데 이용되는 use@Query 훅 함수가 있습니다. 
+
+형식: 
+```jsx
+const query = useQuery({queryKey: ['repositories'],queryFn: getRepositories})
+```
+
+* 유의 사항
+- queryKey는 쿼리를 위한 고유한 키로 데이터의 캐싱과 다시 가져오기에 이용.
+- queryFn은 데이터를 가져오는 함수이며 '프로미스 반환'해야 한다. 
+
+useQuery 훅이 반환하는 query 객체에는 쿼리 상태와 같은 중요 속성이 포함되 있습니다. 
+
+형식: 
+```jsx
+const {isLoading, isError, isSuccess} = useQuery({queryKey: ['repositories'],queryFn: getRepositories})
+```
+객체의 구조 분해 형태로 설명했습니다. -> 이상의 코드가 해석되어야만 합니다. 
+
+- isLoading : 데이터를 아직 이용할 수 없음
+- isError : 쿼리가 오류로 종료
+- isSuccess : 쿼리가 성공적으로 종료되었으며 쿼리 데이터를 이용할 수 있음
+
+그래서 이상의 내용을 바탕으로 Github예제를 응용하겠습니다. 
+
+데이터를 가져오기 위한 컴포넌트인 Repositories.jsx파일 생성
+
+```jsx
+import { useQuery } from "@tanstack/react-query";
+import axios from "axios";
+
+function Repositories(){
+  
+  const getRepositories = async() => {
+    const response = await axios.get(`https://api.github.com/search/repositories?q=react`);
+    return response.data.items;
+  }
+
+  const { isLoading, isError, data } = useQuery({
+    queryKey:['repositories'],
+    queryFn: getRepositories,    
+  });
+  
+  //조건부 렌더링 부분 구현 : 데이터를 이용할 수 있을 때 렌더링
+  // REST API 호출이 오류로 끝나는 경우 메시지 렌더링
+
+  if (isLoading){
+    return <p>로딩 중...</p>
+  }
+
+  if (isError){
+    return <p>오류 발생했습니다. </p>
+  }
+  else{
+    return(
+    <>
+      <table>
+        <tbody>
+          {
+            data.map(repo => 
+              <tr key = {repo.id}>
+                <td>{repo.full_name}</td>
+                <td>
+                  <a href={repo.html_url}>{repo.html_url}</a>
+                </td>
+              </tr>
+            )
+          }
+        </tbody>
+      </table>
+    </>
+    );
+  }
+
+}
+
+export default Repositories;
+```
+
+이상의 코드에서 저희가 주목해야 할 점은 :
+
+더 이상 App.jsx에 한 번에 전부 다 쓰지 않고 필요 기능을 Component로 분할했다는 점
+
+그리고 repositories라는 Component 자체를 App.jsx에 집어 넣었습니다. 
+
+component 1,2,3,4,5 이렇게 생성해서 App.jsx에 넣기만 하면 -> 저희는 여태까지 App.jsx를 만들었다 보니까 main.jsx에 하나하나 다 집어넣어 왔었습니다. 
+
+이제 저희는 전체 App.jsx 내에 구역구역을 Component들로 채워넣는 방식을 연습해나갈 예정입니다. (그 과정에서 다양한 라이브러리 이용을 할 거구요.).
+
+- 그리고 이상의 앱은 리액트 쿼리 라이브러리를 이용해서 리포지토리 정보들을 가지고 오고, 리액트 쿼리 내장 기능을 이용하여 요청 상태를 쉽게(useState를 쓸 때보다)처리할 수 있었습니다. 리액트 쿼리가 데이터 관리와 캐싱을 처리하기 때문에 응답 데이터를 저장하기 위한 상태(data, setData)가 필요하지 않았습니다. 
+
+여러분들의 복습 포인트는 githubapiapp과 gitapi의 코드 상의 차이점이 되겠습니다. 
+
+- 개발자 도구의 Network 탭에서 새창과 리액트 프로젝트 창을 왔다갔다 해보면 리액트 쿼리에 의해 자동으로 다시 불러오기가 실행된다는 점을 확인할 수 있습니다. 즉 브라우저에 포커스를 맞출 때마다(리액트 앱으로 창이 넘어갈 때 마다) 업데이트 된 데이터를 볼 수 있는 좋은 기능입니다. 이 기본 작동을 전역적으로 혹은 쿼리별로 변경할 수 있습니다. 
+
+* 참고 사항 : 네트워크가 다시 연결되거나 쿼리의 새 인스턴스가 마운트될 때 (컴포넌트가 DOM에 삽입될 때)다시 불러오기도 자동으로 실행됨.
+
+#### 리액트 쿼리의 추가 핵심 속성들
+- stableTime : 데이터가 최신으로 유지되는 시간을 규정 -> 해당 시간을 넘기면 오래된 것으로 간주되어 백그라운드로 다시 불러오게 됨. default 값은 0이며 이는 쿼리 성공 직후 데이터가 최신이 아닌 상태가 된다는 의미. 그래서 데이터가 자주 변경되지 않는 경우 stableTime 값을 설정하면 불필요한 다시 가져오기를 방지할 수 있습니다. 
+
+적용 사례
+```jsx
+  const { isLoading, isError, data } = useQuery({
+    queryKey:['repositories'],
+    queryFn: getRepositories,
+    stableTime: 60 * 10000, //밀리초 단위이기 때문에  1분을 의미함.    
+  });
+```
+
+- cacheTime : 비활성 상태인 쿼리들이 garbage collection 대상이 되는 타이밍을 명시함. default로는 5분
+
+#### useMutation Hook
+
+: 리액트 쿼리 상에서 내장된 오류 처리, 캐시 무효화와 함께 데이터 생성, 업데이트, 삭제를 위한 HOOK -> 데이터 변경(Mutation) 처리를 간소화할 수 있도록 함. 
+
+예를 들어 새 자동차를 추가하고 싶기 때문에 POST에 해당하는 HTTP method를 이용한다면 다음과 같이 작성 가능합니다. 
+
+```jsx
+//쓸거라서 import 까먹으면 안됩니다. 
+import { useMutation } from '@tanstack/react-query';
+import axios from "axios";
+
+//사용법
+const mutation = useMutation({
+  mutationFn: (newCar) => {
+    return axios.post('api/cars', newCar);
+  }, 
+  onError: (error, variables, context) => {
+    // 변경 오류와 관련된 부분 처리
+    // 예를 들어 console.log(error);
+  },
+  onSuccess: {data, variable, context} => {
+    //변경 성공과 관련된 부분 처리
+  },
+});
+```
+
+이상의 예제에서의 코드 설명
+- mutationFn : 해당 key의 속성값은 서버에 POST 요청을 수행하고, '프로미스 반환'
+- onSuccess / onError : 성공시/실패시 적용 함수
+
+```jsx
+mutation.mutate(newCar);//저 위에 코드와 합쳐서 객체명. 메서드명(argument), 형태로 실행했다는 의미입니다. 
+```
+와 같은 방식으로 변경을 실행할 수 있습니다. 
+
+#### QueryClient의 메서드
+
+- invalidateQueries() : 캐시 내 쿼리를 무효화하는 데 사용. 만약 캐시에서 쿼리가 무효화되면 해당 쿼리는 다시 데이터를 가져올 것입니다. 
+
+이전 예시에서는 useMutation을 통해서 서버에 사로운 자동차를 추가(POST 작업)했습니다. 만약 모든 자동차를 가져오는 쿼리가 있고, 그 쿼리의 ID가 cars라면 새 자동차가 성공적으로 추가된 후에 해당 쿼리를 무효화해야할 것입니다. 
+
+예시:
+```jsx
+import {useQuery, useMutation, useQueryClient} from '@tastack/react-query';
+
+const queryClient = useQueryClient();
+
+//모든 자동차를 가져온다면
+const {data } = useQuery({
+  querykey:['cars'],
+  queryFn: fetchCars,
+})
+
+// 새 자동차 추가 과정
+const mutation = useMutation({
+  mutationFn: (newCar => 
+    return axios.post('api/cars', newCar);
+  ),
+  onError:(error. variables, context) => {
+    
+  },
+  onSuccess: {data, varialbles, context} => {   //axios.post()에서 추가된 부분입니다. 
+    //cars 쿼리 무효화
+    queryClient.invalidateQueries({queryKey:[cars]});
+  },
+})
+```
+
+* '캐시를 무효화'한다는 것의 의미 : 캐시 이후에 서버에 추가된 새 자동차 데이터를 불러온다는 의미가 됩니다. 
+
+# 20250306 ~ 20250307에서의 수업 요약
+
+: react를 이용한 네트워킹.
+1. 비동기 네트워크 호출을 더 쉽게 구현하는 프로미스(콜백함수의 발전형)
+2. Axios / React query 라이브러리 사용.
+3. fetch API - openweather api / axios API -> github REST API
+4. 경쟁 조건과 관련된 내재된 문제점을 확인 -> React Query 를 활용하여 해결
+5. React Query 활용 데이터를 가지고 오는 방법(axios도 함께 사용하며)
+
+# 서드파티 컴포넌트
+
+awesome-react-components
+
+라고 검색해보시면
+
+https://github.com/brillout/awesome-react-components
+
+여기서 ctrl + f 눌러서 키워드 입력 후에 검색하면 대충 나옵니다. 
+
+이번 시간에는 해당 컴포넌트에서 필요한 것들을 빼와서 어떻게 적용할지에 대해 수업할 예정입니다. 
+
+저희는 ctrl + f : date-picker
+
+서드파티 컴포넌트 설치 명령어
+```cmd
+npm install 컴포넌트_이름
+
+그래서 저희는 
+npm install react-date-picker
+```
+
+npm install react-date-picker로 설치하면 가장 최신 버전이 설치됩니다. 
+
+npm install react-date-picker@4
+일 경우에 저희가 vite project 만들 때 처럼 버전을 명시하는 것이 가능합니다. 
+
+자체 명령어
+
+```cmd
+npm uninstall 컴포넌트_이름
+```
+
+프로젝트 루트 디렉토리에서 오래된 컴포넌트를 확인하는 명령어
+
+```cmd
+npm outdated
+```
+출력이 비어있으면 모든 컴포넌트가 최신이라는 의미
+한꺼번에 업데이트 하려면
+```cmd
+npm update
+```
+
+## AG Grid
+
+스프레드 시트처럼 데이터를 표시하는 데 이용 가능하면서, 상호 작용이 되는 그리드 컴포넌트.
+필터링/ 정렬 / 피벗 등 유용한 기능이 있구요. 유무료 버젼이 있는데 저희는 무료 쓸겁니다. 
+
+### githubapiapp 폴더로 넘어왔습니다. 
+
+App2.tsx 파일 만들고, 표 부분을 전부 날렸습니다. 
+왜 -> App.tsx 내부에서는 저희가 정의했고, 리액트 자체에서 지원하는 App.css 형태로의 테이블을 생성했지만, 이제는 AG Grid를 이용할 예정이기 때문입니다. 
+
+그렇다면 서드 파티를 사용할거기 때문에 어떤 과정이 필요하다? npm install
+
+npm install --save ag-grid-community ag-grid-react
+
+그리고 다양한 ag grid 관련 css 중에 material 디자인 스타일 적용을 하기 위해
+
+```tsx
+import { AgGridReact } from 'ag-grid-react';
+import 'ag-grid-community/styles/ag-grid.css'
+import 'ag-grid-community/styles/ag-theme-material.css'
+```
+를 import 했습니다. 다른 css 파일들의 경우에는 node_moudules 폴더(의존성을 모아둔)에 ag-grid-community를 확인하시면 됩니다. 
+
+```tsx
+import { AgGridReact } from 'ag-grid-react';
+import 'ag-grid-community/styles/ag-grid.css'
+import 'ag-grid-community/styles/ag-theme-material.css'
+
+import { useState } from 'react';
+import axios from 'axios';
+import './App.css'
+
+type Repository = {
+  id: number;
+  full_name: string;
+  html_url: string;  
+}
+
+function App() {
+  const [keyword, setKeyword] = useState('');
+  const [repodata, setRepodata] = useState<Repository[]>([]);
+
+  const handleClick = () => {
+    axios.get< {items: Repository[]}>(`https://api.github.com/search/repositories?q=${keyword}`)
+    .then(response => setRepodata(response.data.items))
+    .catch(err => console.log(err))
+  }
+  
+  return (
+    <>
+      <input 
+      value={keyword}
+      onChange={e=>setKeyword(e.target.value)}
+      />
+      <br /><br />
+      <button onClick={handleClick}>Search</button>
+      <div className="ag-theme-material" 
+        style = {{height: 500, width: 850}}>
+          <AgGridReact
+            rowData={repodata}/>
+      </div>
+    </>
+  );
+}
+
+export default App
+```
+
+AgGridReact 컴포넌트를 적용하여 거기에 repodata를 집어넣었습니다. 
+
+-> ag-grid에 이용된 컬럼들을 정의할 겁니다. 
+
+컬럼 정의 객체의 배열인 columnDefs라는 상태를 정의할겁니다. ag-grid는 여기에 이용할 수 있는 ColDef타입을 제공합니다. 컬럼 객체에서는 필수 field프롭을 이용하여 데이터 접근자를 정의해야 합니다. field 값은 컬럼이 표시해야 하는 REST API 응답 데이터의 속성 이름에 해당합니다. 
+
+```tsx
+import {ColDef} from 'ag-grid-community';
+//컬럼 정의
+const [columnDefs] = useState<ColDef[]>([
+  {filed: 'id'},
+  {field: 'full_name'},
+  {filed: 'html_url'},
+
+]);
+
+```
+
+- 이상으로 작성하니까 현재 오류가 발생해서 월요일에 수정해두겠습니다. 
+
+git add .
+
+git commit -m "feat:20250307 ag grid with an error"
+
+git push
