--- a/manual/20250311.md
+++ b/manual/20250311.md
@@ -63,4 +63,97 @@ Route 컴포넌트는 여러 Route 컴포넌트를 감싸는 것이 가능한데
 ```jsx
 <Link to="/contact">Contact</Link>
 ```
-예를 들어 이상의 링크를 클릭하면 Contact 엔드포인트를 이동하게 됩니다. (JS에서는 <a>태그와 img 태그를 합치는 등의 학습을 했었습니다.)
+예를 들어 이상의 링크를 클릭하면 Contact 엔드포인트를 이동하게 됩니다. (JS에서는 a 태그와 img 태그를 합치는 등의 학습을 했었습니다.)
+
+## React Router 프로젝트 생성
+
+npm create vite@4.3
+project name: routerapp
+react
+typescript
+
+폴더 넘어가서
+npm install 
+npm install react-router-dom@6
+
+git add .
+git commit -m "feat: 20250311 react router app started"
+git push
+
+### 라우팅 이용 컴포넌트 예시 적용
+components 폴더를 src 폴더 내부에 생성한 후에 거기에 Home.tsx / Contact.tsx 파일을 생성
+
+```tsx
+import { BrowserRouter, Routes, Route, Link } from 'react-router-dom'
+//만든 컴포넌트들을 Import
+import Home from './components/Home'
+import Contact from './components/Contact'
+import './App.css'
+
+function App() {
+  
+  return (
+    <>
+      <BrowserRouter>
+        <nav>
+          <Link to="/">Home</Link>{'|'}          
+          <Link to="/contact">Contact</Link>
+        </nav>
+        <Routes>
+          <Route path="/" element={<Home />} />
+          <Route path="/contact" element={<Contact />} />
+        </Routes>
+      </BrowserRouter>
+    </>
+  )
+}
+
+export default App
+```
+
+### path 프롭의 와일드카드(*) 이용 예시
+
+PageNotFound 경로를 만들겁니다. 
+
+pageNotFound.tsx를 만들고, 
+return h1 사이즈의 Page Not Found를 작성하세요.
+
+그리고 App.tsx로 이동하시오. -> 혹시 작성할 수 있으면 Routes 내에 새 Route 컴포넌트를 생성하여 Page Not Found 를 띄울 수 있도록 하셔도 됩니다. 
+<nav>는 건드리지 않습니다. 
+
+### 중첩 Route
+
+ContactLondon.tsx 만드시고, return으로 h2 Hello London
+ContactSeoul.tsx 만드시고, return으로 h2 Hello Seoul
+작성해주세요.
+
+```tsx 중첩 Route 코드 예시
+  <Route path="/contact" element={<Contact />}>
+    <Route path="seoul"  element={<ContactSeoul />} />
+    <Route path="london" element={<ContactLondon />} />
+  </Route>
+```
+
+* useRoutes() Hook을 이용하여 React 요소 말고 JS 객체를 이용해 경로를 선언하는 방법도 있습니다. 
+
+서드파티를 사용하기 위한 공식문서를 참조하는 역량 -> 관련 공식 문서 부분을 긁어서 구글 및 chatgpt를 사용할 수도 있는데
+
+chat gpt는 일정 기간까지의 정보를 기준으로 AI 답변이 생성 -> 완전 최신화 되어있는 버전의 경우 적절한 답변을 생성하지 못할 수 있기 때문에
+
+항상 stackoverflow 및 구글링을 통해 정보를 수집하신 후에 작성할 필요가 있습니다.
+
+# 01-starting-project 관련
+
+zip 파일 받아서, 압축 풀어서, 폴더 하나 들어가서 ctrl + x 잘라낸 다음
+프로젝트 폴더 부분으로 옮겨와서 ctrl + v 붙여넣기 했고, 
+
+01-starting-project 폴더로 이동 -> npm install을 했어야 했다. (스타팅 프로젝트 파일 까보니까 node 관련 폴더가 없었기 때문에 npm run dev 가 불가능하다는 점에서)
+
+npm install => 의존성 설치
+npm run dev -> 서버 실행까지 확인
+
+사용자 이름_react 폴더로 이동해서
+
+git add .
+git commit -m "feat:20250311 01-starting-project started"
+git push
