--- a/manual/20250311.md
+++ b/manual/20250311.md
@@ -147,13 +147,111 @@ chat gpt는 일정 기간까지의 정보를 기준으로 AI 답변이 생성 ->
 zip 파일 받아서, 압축 풀어서, 폴더 하나 들어가서 ctrl + x 잘라낸 다음
 프로젝트 폴더 부분으로 옮겨와서 ctrl + v 붙여넣기 했고, 
 
-01-starting-project 폴더로 이동 -> npm install을 했어야 했다. (스타팅 프로젝트 파일 까보니까 node 관련 폴더가 없었기 때문에 npm run dev 가 불가능하다는 점에서)
+01-starting-project 폴더로 이동 -> npm install을 했어야 했다. (스타팅 프로젝트 파일 까보니까 node 관련 폴더가 없었기 때문에 npm run dev가 불가능하다는 점에서)
 
-npm install => 의존성 설치
+npm install -> 의존성 설치
 npm run dev -> 서버 실행까지 확인
 
-사용자 이름_react 폴더로 이동해서
+사용자이름_react 폴더로 이동해서
 
 git add .
 git commit -m "feat:20250311 01-starting-project started"
 git push
+
+## task # 1
+
+components 폴더를 만들고, Header.jsx 파일을 생성한 후
+App.jsx의 Header 부분을 분리하여 컴포넌트화 하시오. 
+
+최종 결과물은 달라지지 않습니다.
+
+### 풀이
+src 내부에 components 폴더 생성
+-> Header.jsx 파일 생성
+-> App.jsx 내부의 return에서 <header></header> 사이를 전부 ctrl + x로 잘라내기
+
+```jsx
+//Heaer.jsx
+function Header(){
+
+  return(
+    <header>
+    <img src="src/assets/react-core-concepts.png" alt="Stylized atom" />
+    <h1>React Essentials</h1>
+    <p>
+      Fundamental React concepts you will need for almost any app you are
+      going to build!
+      <br />
+      대부분의 앱을 위해 당신이 필요로 할 근본적인 React 개념 학습
+    </p>
+    </header>
+  );
+}
+
+export default Header;
+```
+## task # 2
+const reactDescriptionEng 배열을 이용하여
+Header 컴포넌트들의 p 태그 내의 Fundemental 을 Crucial로 바꿀 수 있도록 작성하시오. 
+
+### 풀이
+
+1. React Component 상에서 JS 변수를 불러낼 수 있는 방법 -> {}
+2. 배열의 특정 element 들을 뽑아오는 방법 -> index 넘버를 사용 0,1,2,3 ... 순서
+
+```jsx
+const reactDescriptionKor = ['근본적인','결정적인', '혁신적인'];
+const reactDescriptionEng = ['Fundemental', 'Crucial', 'Core'];
+
+function Header(){
+  return(
+    <header>
+    <img src="src/assets/react-core-concepts.png" alt="Stylized atom" />
+    <h1>React Essentials</h1>
+    <p>
+      {reactDescriptionEng[1]} React concepts you will need for almost any app you are
+      going to build!
+
+    </p>
+    <br />
+      대부분의 앱을 위해 당신이 필요로 할 근본적인 React 개념 학습
+  </header>
+  );
+}
+```
+
+## task # 3
+```jsx
+function getRandomInt(max){
+  return Math.floor(Math.random()*(max + 1));
+}
+```
+
+이상의 함수를 분석하고, 강의 내용에 따라 페이지를 새로고침할 때 마다
+fundemental, Crucial, Core 셋 중의 하나의 element가 임의적으로 출력될 수 있도록 Header Component를 수정하시오.
+
+function getRandomInt는 수정하지 않아도 좋습니다. (하드 코딩을 방지하기 위한 함수 수정은 추후에 하겠습니다.)
+
+### 풀이
+
+이상의 함수 풀이 결과 max 매개변수는 reactDescription 배열의 최대 인덱스 넘버임을 확인할 수 있습니다. 
+
+getRandomInt(2)를 호출 했을 경우 -> 0,1,2 셋 중의 하나에 해당하는 정수가 반환되기 때문에.
+-> JS 시간에 로또 번호 생성기에서 비슷한 알고리즘 진행했습니다. 
+
+```jsx
+    <p>
+      {reactDescriptionEng[num]} React concepts you will need for almost any app you are
+      going to build!
+    </p>
+```
+로 작성하게 되면 페이지 새로고침ㅇ르 할 때 마다 배열 내의 랜덤한 element를 출력하게 됨.
+
+* 이상에서의 문제점은 한국어와 영어 버전을 각각 {reactDescriptionEng[getRandomInt(2)]} 형태로 작성했을 경우 한국어 버전과 영어 버전의 해석이 달라지는 문제점이 있습니다. 
+
+이유는 뭐고, 해결 방법은 무엇일지 20250312에 수업할 예정입니다. 각자 생각해보시기 바랍니다. 
+
+git add .
+git commit -m "feat:20250311 react essential project started"
+git push
+
