feat: 20250313 useState review

--- a/manual/20250226.md
+++ b/manual/20250226.md
@@ -211,6 +211,7 @@ export default HeaderText
 
 App4.jsx만들겠습니다.
 
+```jsx
 import React, { memo } from 'react';
 
 function HeaderText(props) {
@@ -231,7 +232,7 @@ export default memo(HeaderText);
  * 
  * 조건부 렌더링
  */
-
+```
 
  ### 조건부 렌더링
 
