feat: 20250314 useState / 삼항연산자 / 객체조회방식 두 가지

--- a/manual/20250313.md
+++ b/manual/20250313.md
@@ -349,7 +349,7 @@ export default function TabButton({children}){
 
   <TabButton onSelect={handleSelect('굿나잇')}>Components</TabButton>
   ```
-  와 같은 방식을 적용하여 TabButton이라는 컴포넌트와 App 컴포넌트를 연결할 숙 있었습니다. 
+  와 같은 방식을 적용하여 TabButton이라는 컴포넌트와 App 컴포넌트를 연결할 수 있었습니다. 
   이상의 결과로 렌더링 될 때 handleSelect함수의 결과값인 굿나잇이 콘솔에 출력됩니다.
 
   -> 즉 버튼을 눌렀을 때 굿나잇이 출력되지 않는다는 점이 문제
