--- a/manual/20250228.md
+++ b/manual/20250228.md
@@ -412,7 +412,7 @@ export default function App(){
 
 그렇다면 useRef 를 사용한 Ref COunt 값은 변경이 실제로 일어나지 않는가? -> 아니오.
 
-내부적으로는 카운트가 올라가고 있지만 화면에 바로 렌더링이 일어나지 ㅇ낳습니다. 
+내부적으로는 카운트가 올라가고 있지만 화면에 바로 렌더링이 일어나지 않습니다. 
 
 그래서 State 버튼을 다시 눌러 리렌더링을 일으키게 됬을 때 변경점이 한꺼번에 나타난다는 점을 확인할 수 있습니다. 
 
