--- a/manual/20250317.md
+++ b/manual/20250317.md
@@ -79,8 +79,9 @@ React
 
 JavaScript
 
-npm install
+프로젝트 폴더로 가서 ctrl + shift + ` 눌러서 터미널 열고
 
+npm install
 npm run dev
 
 .md 파일 있는 vs 코드 열어서
@@ -88,3 +89,75 @@ npm run dev
 git add .
 git commit -m "feat:20250317 kpoplist / contextAPI review started"
 git push
+
+# React 컴포넌트의 상태
+
+## 컴포넌트의 데이터 변경 및 전달
+: React는 큼포넌트 기반의 아키텍쳐를 사용합니다. UI를 작은 컴포넌트로 나노구, 이 컴포넌트들을 조합하여 완전한 UI를 생성합니다. 컴포넌트 내부에서 데이터를 동적으로 변경해야 하는 경우 상태(state)를 사용하며 이를 통해 컴포넌트는 자체적으로 데이털르 관리하고 업데이트할 수 있습니다. 
+
+컴포넌트 간 데이터 전달은 단방향으로 'props'를 통해 이루어지며, 상위 컴포넌트가 하위 컴포넌트에 데이터를 전달합니다.하위 컴포넌트는 해당 데이터를 읽을 수만 있고 직접 수정할 수 없습니다. 
+
+## 상태 관리 라이브러리의 필요성
+
+: state가 많아지면 기존의 리액트만으로는 서비스를 관리하고 유지하기가 어려워집니다. 이를 해결하기 위해 상태 관리 라이브러리의 필요성이 대두되었습니다. 
+
+### 상태 관리 라이브러리란?
+
+: 간단한 프로젝트에서는 props를 통한 단방향 데이터 흐름이 가시성이 높을 수 있지만 일정 크기 이상이 되었을 경우에 state의 개수가 늘어나게 되고, props를 통한 데이터 전달이 어려워집니다. 
+
+![프롭스드릴링](propsDrilling01.png)
+
+이상의 그림 예시에서 책은 철수에게 한 번에 전달되지 않고, 중간의 학생들을 거쳐서 전달되게 되는데, 중간의 학생들은 책이 필요하지 않지만 철수에게 전달되려면 꼭 거쳐가야합니다. 전달 중 데이터가 훼손될 수도 있고, 많은 사람을 통해 전달해야 하기에 철수가 아니라 다른 학생(영희)에게 전달될 수도 있는 등의 잠재적인 문제가 있습니다. 
+
+그렇다면 프롭스 드릴링을 정의하자면
+
+: propos를 통해 데이터를 전달하는 과정에서 중간 컴포넌트는 데이터가 필요하지 않아도 하위 컴포넌트에 전달하기 위해 props를 받아 단계별로 전달해야 하는 과정을 의미함. 
+
+```jsx
+import React from 'react';
+
+function ComponentA(){
+  const data='props drilling';
+  return <ComponentC data={data} />;
+}
+
+function ComponenetC({data}){
+  return <ComponentE data={data} />;
+}
+
+function ComponenetE({data}){
+  return <ComponentG data={data} />;
+}
+
+function ComponenetG({data}){
+  return <ComponentH data={data} />;
+}
+
+function ComponenetH({data}){
+  return <>{data}</>;
+}
+
+function App(){
+  return <ComponentA />;
+}
+
+export default App;
+```
+
+이상의 예시 코드는 props drilling이 컴포넌트 계층 구조가 복잡해지고 깊어질수록 문제가 생길 수 있음을 시사합니다. 불필요한 props를 전달하다가 중간에 누락되든지, 혹은 props의 이름이 임의로 변경되는 경우 추적이 어려워지는 등 데이터 훼손의 문제를 잠재적으로 지니고 있습니다. 
+
+그리고 중첩된 컴포넌트를 통해 props가 전달되면 가독성이 떨어지고, 데이터의 흐름이 복잽해져 유지보수상의 어려움도 존재합니다. 
+
+이런 문제를 해결하기 위해 리액트 내장 Hook인 ContextAPI나 redux, recoil과 같은 상태 관리 라이브러리를 사용합니다.(전에 이야기한적은 있습니다.)
+
+kpoplist
+
+src -> components 폴더 생성
+Button.jsx
+Kpoplist.jsx
+Main.jsx
+
+src 
+App.jsx
+App.css
+Main.jsx -> 나중에 바꿀 수도 있습니다. 
