feat: 20250317 context API lesson

--- a/manual/20250317.md
+++ b/manual/20250317.md
@@ -161,3 +161,70 @@ src
 App.jsx
 App.css
 Main.jsx -> 나중에 바꿀 수도 있습니다. 
+
+index.jsx -> main.jsx로 다시 원상복구 시키겠습니다. 
+
+터미널
+
+npm install uuid
+
+```jsx
+    <>
+      <Button data={data} setPlaylist={setPlaylist} filterType="redvelvet">
+        레드벨벳 노래 찾기
+      </Button>
+      <Button data={data} setPlaylist={setPlaylist} filterType="mal;e">
+        남자 아티스트 노래 찾기
+      </Button>
+      <Button data={data} setPlaylist={setPlaylist} filterType="female">
+        여자 아티스트 노래 찾기
+      </Button>
+      <Kpoplist playlist={playlist}></Kpoplist>
+    </>
+```
+수정사항 관련
+1. App.jsx에서 data를 Main.jsx로 props로 전달
+2. Main.jsx에서 Button 컴포넌트로 data와 setPlaylist를 전달하면서 filterType를 전달
+3. Button.jsx에서 filterType에 따라 data를 필터링하여 setPlaylist를 호출
+4. playlist가 변경되면 KpopList.jsx에서 재랜더링
+5. npm install uuid
+
+### Props Drilling 의 문제점
+
+: Props Drillimg은 데이터를 사용하지 않는 App의 직계 자식 컴포넌트  또한 props를 전달받아야한다는 점입니다. main 큼포넌트는 자식 컴포넌트에 props를 보내주김나 할 뿐이고, 직접 필요로 하지 ㅇ낳기 때문에 메모리적으로 비효율적입니다. 
+
+KPOPList 컴포넌트 및 Button 컴포넌트가 직접 데이터를 사용하는 것이 효율적으로 보입니다. 
+
+useContext는 전역적으로 데이털르 공유하기 때문에 중간 다리 역할만하는(여ㅑ기서는 Main.jsx)컴포넌트를 건너 뛰고 데이터가 직접적으로 필요한 컴포넌트에서 바로 사용이 가능하도록 합니다. 따라서 이상의 모든 하위 컴포넌트에 props가 전달되는 문제를 피할 수 있습니다. 
+
+### Context API 및 useContext Hook 이용, props drilling 해결하기
+
+npm create vite@4.3
+
+kpoplistcontext
+
+react 
+
+JavaScript
+
+폴더 이동
+
+npm install
+npm run dev
+
+git add .
+git commit -m "feat: context API applied kpop list started"
+git push
+
+이 후 App.jsx 프래그먼트만 남기고 초기화
+
+src -> components -> Button.jsx / KPopList.jsx / Main.jsx
+src -> context 폴더 -> context.jsx
+App.css 파일 -> kpoplist의 App.css 코드 그대로 붙여넣기
+
+
+git add .
+git commit -m "feat: 20250317 context API lesson"
+git push
+
+로그아웃
