feat:20250319 useReducer login form

--- a/manual/20250318.md
+++ b/manual/20250318.md
@@ -478,7 +478,7 @@ App.jsx는 초기화합니다.
 개별 과제의 경우 3월 25일 기준으로 제가 과제 형태를 정해놓고 제출해가면서 여러분 만의 사이트를 만들어 나가는 과정을 목표로 합니다.
 
 git add .
-git commit -m : "feat: 20250318 useReducer page started"
+git commit -m "feat: 20250318 useReducer page started"
 git push
 
 다 하시면 로그아웃
