--- a/manual/20250321.md
+++ b/manual/20250321.md
@@ -136,4 +136,152 @@ reacttodoapp
 react
 JavaScript
 
+폴더 이동 후
+npm install
+
+App.jsx 초기화
+assets 아이콘 파일도 삭제했습니다. 
+
+git add .
+git commit -m "feat: 20250321 reacttodoapp started"
+git push
+
+```jsx
+import { useState } from "react";
+import './App.css';
+
+function App() {
+  const [ toDo, setToDo ] = useState(''); // 얘네가 element가 됨
+  const [ toDos, setToDos ] = useState([]); // 얘가 배열인데 ↑
+
+  const onChange = (event) => {
+    setToDo(event.target.value);
+    // console.log(toDo); -> input에 입력되는 값이 매번 setToDo에 적용되어 ToDo 상태가 업데이트
+  };
+
+  const onSubmit = (event) => {
+    // 1.
+    event.preventDefault();
+    // toDo 상태가 비어있을 때는 onSubmit이 수행되지 않으면 좋겠습니다.
+    // 2.
+    if(toDo === '') {
+      return;
+    }
+    // 3.
+    setToDos((currentArray) => [ toDo , ...currentArray]);  // spread 문법
+    console.log(toDos);
+    setToDo('');  // 이상의 조건문이 실행되지 않았다면 버튼 클릭 후에 input창을 비움
+    // 4.
+
+  }
+
+  // form 태그에는 submit 이벤트를 자체적으로 가지고 있음(근데 onSubmit 속성명을 통해서 지정해주는 편)
+  return (
+    <div>
+      <h1>My To Dos</h1>
+      <form onSubmit={onSubmit}>
+        <input 
+          type="text" 
+          onChange={onChange}
+          value={toDo}
+          placeholder="Type Your To Do 💻"/>
+        <button>Add To Do</button>
+      </form>
+    </div>
+  )
+}
+
+export default App
+```
+
+1. 주의해서 봐야할 부분들
+- toDo, toDos의 자료형 : string, []
+- toDos의 element 들의 자료형 string = toDo의 자료형과 동일(input에서 썻으니까, input type="text")
+- setToDo(''); 가 일어나는 시점 -> if 문 이후(setToDos() 실행 이후 -> toDos에 새로운 상태인 toDo가 업데이트 된 이후)
+- setToDos();가 실행되어야만 하는 시점(1,2,3,4로 주석에 표시해뒀고, 답은 3이었습니다.)
+
+```jsx
+import { useState } from "react";
+import './App.css';
+
+function App() {
+  const [toDo, setTodo] = useState('');//이쪽이 element가 됨
+  const [toDos, setTodos] = useState([]); // 얘가 배열인데 ☝
+
+  const onChange = (event) => {
+    setTodo(event.target.value)
+    //console.log(toDo); -> input에 입력된 값이 매번 setTodo에 적용되어 Todo상태가 업데이트
+  };
+
+  const onSubmit = (event) => {
+    //1.
+    event.preventDefault();
+    //toDo 상태가 비어있을 때는 onSubmit이 수행되지 않으면 좋겠습니다. 
+    //2.
+    if(toDo===''){
+      return;
+    }
+    //3.
+    setTodos((currentArray) => [toDo,...currentArray]); //spread 문법
+    //console.log(toDos);
+    setTodo(''); //이상의 조건문이 실행되지 않았다면 버튼 클릭 후에 input 창을 비움
+    //4.
+    
+  }
+
+  //form 태그에는 submit 이벤트를 자체적으로 가지고 있음(근데 onSubmit 속성명을 통해서 지정해주는 편)
+  return (
+    <div>
+      <h1>My To Dos</h1>
+      <form onSubmit={onSubmit}>
+        <input 
+          type="text" 
+          onChange={onChange}
+          value={toDo}
+          placeholder="Type your To Do 💻"
+          />
+        <button>Add to do</button>
+      </form>
+      <hr />
+      <ul>
+        {toDos.map((item, index) => <li key={index}>{item}</li>)}        
+      </ul>
+    </div>
+  )
+}
+
+export default App
+```
+
+2. Spread 문법
+- 객체에서도, 배열에서도 사용됩니다. 
+- setToDos((currentArray) =>[toDo, ...currentArray]);에서
+currentArray가 배열이라고 가정했을 때, ...currentArray는 currentArray의 element에 해당합니다. 
+그래서 App.jsx를 참조했을 때
+toDo는 input의 결과값이므로 string 자료형에 해당하고, 그것들이 모인 toDos 배열은 내부에 element로서 string 자료형들을 모아둔 것이라고 할 수 있습니다. 
+그리고 ...currentArray는 결과적으로 string's'라고 볼 수 있습니다. 
+[toDo, ...currentArray] 부분은 가장 최근에 입력된 input 결과값을 0번지에 배치하고 기존의 string data들을 1번지부터 차례대로 정렬한다는 것을 확인하 수 있습니다. 
+
+객체에서의 경우 {속성명1:속성값1, 속성명2:속성값2, ...객체명}
+이상의 경우 속성명이 5개쯤 있다고 했을 때, 속성명1과 속성명2에 해당하는 값만 바꾸고, 속성명 3,4,5의 속성값은 그대로 유지한다는 의미입니다. 
+
+3. .map()
+: map()은 내부에 callback 함수가 있는데, 배열의 각 element들에 함수의 결과를 반환하여 새로운 배열을 만들어내는 메서드
+
+이상의 코드를 봤을 때, .map() 메서드의 결과로 <li></li>로 이루어진 배열이 새로 생겨났습니다. 
+[<li>0번지</li>, <li>1번지</li>,<li>2번지</li>, <li>3번지</li>,<li>4번지</li>, <li>5번지</li>]
+
 ## useEffect() 코인 현재 가격 추적기
+
+npm create vite@4.3
+
+coinpriceapp
+react
+js
+폴더 이동 후에 
+npm install
+
+다시 md 파일로 와서
+git add .
+git commit -m "feat: 20250321 spread syntax / .map() method / todolist"
+git push
