--- a/manual/20250324.md
+++ b/manual/20250324.md
@@ -49,3 +49,103 @@ JS
 폴더 이동 하고
 npm install
 
+https://yts.mx/api/v2/list_movies.json?minimum_rating=8.8&sort_by=year
+
+이상의 API 받고 
+git add . 
+git commit -m "feat: movie app started" 
+git push
+
+npm install react-router-dom
+
+기존 fetch - then syntax
+```jsx
+useEffect(() => {
+    fetch('https://yts.mx/api/v2/list_movies.json?minimum_rating=8.8&sort_by=year')
+    .then(response => response.json())
+    .then(json => {
+      setMovies(json.data.movies);
+      setLoading(false);
+    })
+  },[]);
+  ```
+
+  -> async - await 적용 방식으로 개조하고, 
+
+컴포넌트 분리 전 App.jsx
+  ```jsx
+  import { useState, useEffect } from 'react'
+import './App.css'
+
+function App() {
+  const [loading, setLoading] = useState(true);
+  const [movies, setMovies] = useState([]);
+
+  // async - await 
+  const getMovies = async() => {
+    const response = await fetch('https://yts.mx/api/v2/list_movies.json?minimum_rating=8.8&sort_by=year');
+    const json = await response.json();
+    setMovies(json.data.movies);
+    setLoading(false);
+  } //-> 이걸 useEffect에 넣어서 렌더링 될 때 한번만 getMovies 라는 함수를 실행시키겠다. 
+
+  useEffect(() => {
+    getMovies();
+  }, []);
+
+  // console.log(movies);  // 장르 받아올건데 장르가 배열로 되어있습니다. 
+
+  return (
+    <div>
+      {loading ? <h1>로딩 중....</h1> : <div>{movies.map(movie => 
+        <div key={movie.id}>
+          <img src={movie.medium_cover_image} alt={movie.title} />
+          <h2>{movie.title}</h2>
+          <p>{movie.summary}</p>
+          <ul>
+            {movie.genres.map((genre) => (<li key={genre}>{genre}</li>))}
+          </ul>
+        </div>
+      )}</div>
+        
+      }
+    </div>
+  )
+}
+
+export default App
+```
+
+Movie.jsx 생성하고, 영화 한편을 표시하는 (이미지, 제목, 장르, 요약) return 파트를 컴포넌트화시킬 예정
+
+```jsx
+function Movie({key, cover_image, title, summary, genres}){
+
+  <div key={key}>
+  <img src={cover_image} alt={title} />
+  <h2>{title}</h2>
+  <p>{summary}</p>
+  <ul>
+    {genres.map((genre) => (<li key={genre}>{genre}</li>))}
+  </ul>
+</div>
+
+}
+export default Movie;
+```
+
+Movie 컴포넌트에는 movie라는 객체가 존재하지 않는 상황이기 때문에 전체 오류가 발생합니다. 
+그런데 App컴포넌트에서 return 파트에서 movies.map(movie=> {})를 통해 movie라는 매개변수가 존재하기 때문에 상위 컴포넌트 App으로부터 하위 컴포넌트로 프롭스 드릴링이 이어져야 합니다
+
+이상의 코드는 function movie({key, coverimage, title, sumamry, genres})를 구조분해 형태로 받아와서 movie 컴포넌트의 return 파트에 각각 집어넣어줬습니다. 
+
+또한 중요한 점으로 json 데이터상으로는 Medium_cover_img 로 작성되어있지만 기본적으로 객체의 property의 이름은 개발자인 저희가 짓는 것이므로 카멜케이스를 적용하여 coverImg로 축약해서 작성했고, 이것이 Movie 컴포넌트에서도 동일하게 적용되었습니다. 
+
+현재 error가 발생하는 부분은 detail 컴포넌트 작성후에 
+"/"로 되어 있으면 Home 컴포넌트 실행
+"/movie/{id}"로 이동하게 되면 각 영화의 세부 페이지가 실행될 수 있게끔 지정하면 사라집니다. 
+
+git add .
+git commit -m "feat: 20250324 movie app component 분리"
+git push
+로그 아웃
