--- a/manual/20250325.md
+++ b/manual/20250325.md
@@ -19,3 +19,230 @@ web5 팀프로젝트
 개별적으로 최소프로젝트를 진행하는 동안 개인별 진도가 다르기 때문에 컴터/랩탑/태블릿/폰 등과 연결할 이어폰을 최대한 가지고 와 주시면 바랍니다.
 
 목요일까지는 결정
+
+npm create vite@4.3
+vite-project
+React
+javaScript
+
+폴더이동
+npm install -> .node_module 없으면 무조건 깔고 시작하고
+혹시 코드상에 이상이 없는데도 불구하고 오류가 발생한다면 node_module 삭제하고 npm install 하게 되면 고쳐지는 경우가 많습니다. 
+
+여러분이름_projects 폴더로 돌아와서
+
+# movieapp ing...
+
+현재까지 Home.jsx로 컴포넌트 분리를 했습니다. 
+현재 components/movie.jsx 
+
+```jsx
+import { useState, useEffect } from "react";
+import Movie from "./Movie";
+import '../App.css'
+
+function Home(){
+  const [loading, setLoading] = useState(true);
+  const [movies, setMovies] = useState([]);
+
+  // async - await 
+  const getMovies = async() => {
+    const response = await fetch('https://yts.mx/api/v2/list_movies.json?minimum_rating=9.0&sort_by=year');
+    const json = await response.json();
+    setMovies(json.data.movies);
+    setLoading(false);
+  } //-> 이걸 useEffect에 넣어서 렌더링 될 때 한번만 getMovies 라는 함수를 실행시키겠다. 
+
+  useEffect(() => {
+    getMovies();
+  }, []);
+
+  return(
+    <div>
+      
+      {loading ? (<h1>Loading....</h1>) : (
+        <div>
+        {movies.map( movie => 
+        
+        <Movie
+          key={movie.id}
+          cover_image={movie.medium_cover_image} 
+          title={movie.title}
+          summary={movie.summary}
+          genres = {movie.genres} /> 
+      )}</div>
+      
+      )}
+    </div>
+  );
+}
+
+export default Home;
+```
+근데 이상에서 확인할 수 있는 점은 이상의 코드가 App.jsx 상에서 봤을 때
+
+```jsx
+import Home from "./components/Home";
+
+
+function App() {
+  
+  return (  
+    <Home />   
+  );
+}
+
+export default App
+```
+App.jsx의 전체 페이지라는 점에서 component라고 할 수가 없습니다. 
+그리고 또한 영화의 제목을 클릭했을 때 -> 다른 페이지로 이동을 할 수 있어야 합니다.
+이상을 이유로 Home.jsx를 component -> routes로 이동시킬겁니다. 
+
+이제 영화 제목을 클릭했을 때 상세 페이지로 이동하게끔 Detail.jsx를 만들었고, 예를 들어 제목을 클릭했을 때, Detail 페이지로 이동해야 합니다. 
+
+근데 여태까지 저희가 배운 방식에서 (특히 web3 수업에서) 클릭을 통한 페이지 이동을 하는 방식으로는 a태그를 이용했었습니다. 
+
+```jsx
+function Movie({key, cover_image, title, summary, genres}){
+
+return(
+<>
+<div key={key}>
+  <img src={cover_image} alt={title} />
+  <h2>{title}</h2>
+  <p>{summary}</p>
+  <ul>
+    {genres.map((genre) => (<li key={genre}>{genre}</li>))}    
+  </ul>
+</div>
+</>
+)
+  
+
+}
+export default Movie;
+```
+a태그로 h2 태그를 감싸주는 형태를 생각할 수 있습니다.(페이지 상에서 제목을 클릭한다는 점에서 그 위치가 Home / App 컴포넌트가 아니라 Movie 컴포넌트에 있다는 점을 명심하셔야 합니다).
+
+상세 페이지 API 주소
+
+
+```jsx
+import { BrowserRouter as Router, Switch, Route } from "react-router-dom";
+import Home from "./routes/Home";
+import Detail from "./routes/detail";
+
+
+function App() {
+  
+  return (  
+    <Home />   
+  );
+}
+
+export default App
+```
+App.jsx에 import { BrowserRouter as Router, Switch, Route } from "react-router-dom";를 import 했습니다.
+
+이제 영화 제목을 누르면 Detail 페이지로 넘어가고 싶은데, Movie 컴포넌트에서 a 태그 넣으면 되지 않는가, 그리고 위에서 작성했고. 그런데 이 방식을 쓰면 페이지 전체가 이동하게 되면서 리렌더링이 일어납니다. (a태그를 썻을 때 href = "/"를 통해 증명했습니다. -> 그러니까 다시 API를 받아오면서 Loading이 일어나는걸 볼 수 있었습니다).
+
+근데 우리는 리액트를 사용하고 있고, 그래서 이걸 피하고 싶습니다. 
+
+이때 나온 개념이 Link 컴포넌트
+-> 브라우저의 새로고침 없이도 다른 페이지로 이동을 시켜주는 컴포넌트. -> Movie 컴포넌트에 Link를 적용시킬 겁니다. (정확하게는 얘가 a태그를 대체한다고 보시면 됩니다).
+
+react-router-dom 5버전으로 생성했었는데 7버전 깔려서 좀 있다가 수정 좀 하겠습니다. 
+
+## Switch
+
+: Route를 찾는 역할
+
+## Route
+
+: 일반적인 경우 Route는 URL을 의미합니다. 
+http://localhost:5173/movie/123.... etc
+
+현재 저희 프로젝트의 경우에는 두 개의 Route를 사용하게 됩니다. 
+하나는 Home으로 이동하기 위함
+다른 하나는 Movie의 상세 페이지로 이동하기 위해서 id값을 동적으로 적용
+
+node_module 삭제
+npm install
+
+npm i react-router-dom@5.3.0
+
+설치하고 나서 npm run dev를 통해서 재실행하게 됬을 때 일단 제대로 되는지 확인해야 한다. 
+
+제목을 눌렀을 때 
+http://localhost:5174/movie/54329
+로 특정 아이디값으로 이동이 되어야 함.
+
+Route 순서의 중요성
+
+react-router-dom v5에서 Switch 컴포넌트를 사용할 때, Route가 선언된 순서대로 매칭되기 때문에 더 구체적인 경로("/movie/:id")가 더 일반적인 경로("/")보다 더 위에 위치해야 함.
+
+좀 더 정확하게 서술하자면
+Switch가 내부의 Route들을 위에서 아래롤 순차적으로 탐색하면서 가장 먼저 일치하는 Route를 렌더링하고 나머지를 무시함.
+
+```jsx
+<Switch>
+  <Route path="/">
+    <Home>
+  </Route>
+  <Route path="/movie/:id">
+    <Detail>
+  </Route>
+
+</Switch>
+```
+로 작성할 경우 사용자가 /movie/123에 접근하더라도 먼저 선언된 
+
+
+```jsx
+import { BrowserRouter as Router, Switch, Route } from "react-router-dom";
+import Home from "./routes/Home";
+import Detail from "./routes/detail";
+
+
+function App() {
+  
+  return (  
+    <Router>
+      <Switch>
+        <Route path="/movie/:id">
+          <Detail />
+        </Route>        
+        <Route path="/">
+          <Home />
+        </Route>        
+      </Switch>         
+    </Router>
+    
+  );
+}
+
+export default App
+```
+
+```jsx
+<Route path="movie/:id">
+```
+# :/id의 개념 - 동적 파라미터
+여내까지 동적인 개념이라고 할 때 `${id}`라는 형태는 사용했었습니다. 
+엄밀히 말하자면 이는 JavaScript 변수를 HTML 사이에서 사용하기 위한 동적 개념입니다. 
+
+그리고 :id는 React Router에서 사용하는 URL 패턴 변수 "/movie/:id"는 URL에서 해당 값을 추출해서 컴포넌트에 전달합니다.
+
+현재 이동을 하지 ㅇ낳는 이유 중에 하나는
+:id와 연결이 될 부분을 Detail 페이지에서 적용하지 않았기 때문입니다. -> useParams()
+
+최대한 내일은 movieapp에서 detail 페이지로 이동하는 부분을 구현할 예정입니다.(배포까지)
+
+이어폰 지참 부탁드립니다. 
+
+git add .
+git commit -m : 20250325 movieapp Router lesson"
+git push
+
+로그아웃
+정리
